# Beethoven-Software

./: .gitignore  CMakeLists.txt  Makefile  README  README.md  cmake_build.sh  install.sh  uninstall.sh  verilator-widebus-issue.md  zynq-sim-issue.md
.github/workflows/: release.yml
build-lib/: Makefile
cli/: Cargo.toml
cli/docs/: README.md  build.md  check.md  clean.md  config.md  flash.md  info.md  init.md  new.md  run.md  runtime.md  setup.md  sim.md  structure.md  synth.md  uninstall.md  update.md
cli/src/: cli.rs  error.rs  lib.rs  main.rs  template.rs  ui.rs
cli/src/commands/: aws.rs  build.rs  check.rs  clean.rs  flash.rs  info.rs  init.rs  mod.rs  new.rs  pipeline.rs  run.rs  runtime_cmd.rs  scaffold.rs  setup.rs  sim.rs  synth.rs  uninstall.rs  update.rs
cli/src/core/: env.rs  exec.rs  mod.rs
cli/src/runtime/: lifecycle.rs  mod.rs  probe.rs
cli/src/state/: config.rs  mod.rs  project.rs
cli/src/tools/: cmake.rs  git.rs  mod.rs  sbt.rs  vivado.rs
cli/template/: .gitignore  Beethoven.toml.tmpl  build.sbt.tmpl
cli/template-verilog/hw/: {{accel}}Cmd.scala.tmpl  {{accel}}Config.scala.tmpl  {{accel}}Core.v.tmpl
cli/template-verilog/sw/: CMakeLists.txt.tmpl  {{name_snake}}_tb.cc.tmpl
cli/template/hw/: {{accel}}.scala.tmpl  {{accel}}Config.scala.tmpl  {{accel}}Core.scala.tmpl
cli/template/sw/: CMakeLists.txt.tmpl  {{name_snake}}_tb.cc.tmpl
cmake/: BeethovenHardware.cmake  BeethovenSimulator.cmake  Config.cmake.in  Config_baremetal.cmake.in  arm-none-eabi.cmake  beethovenConfig.cmake.in  beethoven_baremetalConfig.cmake.in
custom_dram_configs/: DDR4_8Gb_baroco.ini  help.ini
docs/: beethoven-toml-reference.md  cli-integration.md
docs/issues/: verilator-widebus.md
include/: butil.h  composer_alloc.h  composer_consts.h  composer_util.h  composer_verilator_server.h  csv.h  fpga_handle.h  fpga_transfer.h  memrocc.h  rocc.h
include/beethoven/: alloc.h  arm_cache.h  beethoven_consts.h  fpga_handle.h  response_handle.h  rocc_cmd.h  rocc_response.h  runtime_ipc.h  util.h  verilator_server.h
include/composer/: alloc.h  allocator_ptr.h  composer_consts.h  fpga_handle.h  fpga_handle_aws.h  fpga_handle_sim.h  response_handle.h  (+4 more)
libbeethoven/: CMakeLists.txt
libbeethoven/cmake/: BeethovenBuildHelpers.cmake  beethovenConfig.cmake.in  beethoven_baremetalConfig.cmake.in
libbeethoven/include/beethoven/: arm_cache.h  beethoven_consts.h  fpga_handle.h  rocc_response.h  runtime_ipc.h
libbeethoven/include/beethoven/allocator/: alloc.h  alloc_baremetal.h  device_allocator.h
libbeethoven/src/: response_handle.cc  rocc_response.cc  util.cc
libbeethoven/src/allocator/: alloc.cc
libbeethoven/src/fpga_handle_impl/: fpga_handle_discrete.cc  fpga_handle_zynq.cc
libbeethoven/test/: aws_devmem_test.c
m55_bin/: g++_filter  gcc_filter
runtime/: CMakeLists.txt  README.md  setup_dramsim.sh
runtime/DRAMsim3/: CMakeLists.txt  Makefile  libdramsim3.dylib
runtime/DRAMsim3/cmake/: Config.cmake.in
runtime/DRAMsim3/include/dramsim3/: configuration.h  simple_stats.h
runtime/DRAMsim3/src/: bankstate.cc  channel_state.cc  command_queue.cc  common.cc  configuration.cc  controller.cc  cpu.cc  dram_system.cc  hmc.cc  main.cc  memory_system.cc  refresh.cc  simple_stats.cc  thermal.cc  thermal_replay.cc  thermal_solver.c  timing.cc
runtime/custom_dram_configs/: DDR4_8Gb_rocoba.ini  hyperram.ini  kria_DDR4_4Gb_x8_2400.ini
runtime/include/: DataWrapper.h  cmd_server.h  data_channel.h  data_server.h  fpga_utils.h  front_bus_ctrl_axi.h  mem_ctrl.h  mmio.h  response_channel.h  response_poller.h  state_machine.h  tick.h
runtime/include/core/: cmd_server.h  data_channel.h  data_server.h  data_wrapper.h  ddr_macros.h  mem_ctrl.h  mmio.h  singleton_lock.h  state_machine.h  util.h
runtime/include/fpga/: response_poller.h
runtime/include/frontends/axi/: front_bus_ctrl_axi.h  verilator.h  vpi_handle.h
runtime/include/frontends/chipkit/: front_bus_ctrl_uart.h  state_machine.h  tick.h  util.h
runtime/include/sim/: DataWrapper.h  mem_ctrl.h  verilator.h
runtime/include/sim/axi/: address_channel.h  data_channel.h  front_bus_ctrl_axi.h  state_machine.h  vpi_handle.h
runtime/include/sim/chipkit/: state_machine.h  tick.h
runtime/include/trace/: trace_read.h
runtime/scripts/: build_on_harvard.sh  build_vcs.sh  copy_runtime_deps_to_remote.py  kria_alloc_pages.py  run_vcs  setup_kria.sh  tab.tab  vcs_build.sh  vpd2fsdb
runtime/src/: cmd_server.cc  data_server.cc  fpga_main.cc  fpga_utils.c  kill.cc  mem_ctrl.cc  mmio.cc  response_poller.cc  tick.cc  verilator_axi_frontend.cc  vpi_axi_frontend.cc
runtime/src/core/: DataWrapper.cc  cmd_server.cc  data_server.cc  data_wrapper.cc  fpga_main.cc  mem_ctrl.cc  mmio.cc  singleton_lock.cc  tick.cc
runtime/src/deprecated/: xsim_sanity.cc  xsim_vector_sanity.cc
runtime/src/fpga/: fpga_utils.c  response_poller.cc
runtime/src/frontends/axi/: front_bus_ctrl_axi.cc  verilator.cc  verilator_axi_frontend.cc  vpi_axi_frontend.cc
runtime/src/frontends/chipkit/: front_bus_ctrl_chipkit.cc  state_machine.cc  util.cc  vcs_chipkit_frontend.cc  verilator_chipkit_frontend.cc
runtime/src/sim/: DataWrapper.cc  mem_ctrl.cc  tick.cc
runtime/src/sim/axi/: front_bus_ctrl_axi.cc  verilator_axi_frontend.cc  vpi_axi_frontend.cc
runtime/src/sim/chipkit/: front_bus_ctrl_chipkit.cc  util.cc  vcs_chipkit_frontend.cc  verilator_chipkit_frontend.cc
runtime/src/util/: kill.cc
runtime/tests/: CMakeLists.txt  alloc_test.cc  memcpy.cc
runtime/verilog_resources/: BUFG.v
src/: alloc.cc  allocator_ptr.cc  baremetal.cc  composer_alloc.cc  composer_util.cc  example_software.cc  fpga_handle.cc  fpga_handle_sim.cc  fpga_transfer.cc  gemmNcubed.cc  memrocc.cc  response_handle.cc  rocc.cc  rocc_cmd.cc  rocc_response.cc  rocc_timing.cc  runtime_ipc.cc  template.cc  util.cc  verilator_server.cc
test/: merge_sort.cc
test/cmake_unified/: CMakeLists.txt  README.md  build.sbt  run_test.sh
test/cmake_unified/src/main/c/: .test_unified_build.cc.swp  test_unified_build.cc
test/cmake_unified/src/main/scala/basic/: Config.scala  MyAccelerator.scala
(+11 files in other folders)
